Separated popup forms in their current iteration from base forms.

--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -16,6 +16,7 @@
 
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
+@use 'components/popup-forms';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
