--- a/templates/macros/popups/feature-popup.hbs
+++ b/templates/macros/popups/feature-popup.hbs
@@ -1,12 +1,12 @@
-<div class="{{cssClass}} base-form" autocomplete="off">
+<div class="{{cssClass}} popup-form" autocomplete="off">
     <div class="chat-card chat-card__header chat-card__header--feature">
         <img src="{{item.img}}" class="chat-card__image--primary" /> 
         <div>{{item.name}}</div>
     </div>
 
     {{#if item.system.description}}
-    <div class="base-form__content base-form__content--description">
-        <div class="base-form__header">{{item.actor.name}}</div> 
+    <div class="popup-form__content popup-form__content--description">
+        <div class="popup-form__header">{{item.actor.name}}</div> 
         {{{item.system.description}}}
     </div>
     {{/if}}
@@ -14,17 +14,17 @@
     <hr class="chat-card__hr" />
 
     {{#ifCond effects.length ">" 0}}
-    <div class="base-form__effects">
-        <div class='base-form__effects--title'>Effects</div>
+    <div class="popup-form__effects">
+        <div class='popup-form__effects--title'>Effects</div>
         {{#each effects}}
-            <div class="base-form__effects--name">
+            <div class="popup-form__effects--name">
                 <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
             </div>
             {{#ifCond this.changes.length ">" 0 }}
             {{#each this.changes}}
-                <div class="base-form__effects--row">
-                    <div class="base-form__effects--row-cell base-form__effects--row-cell--first">{{keySplit this.key 2}}</div> 
-                    <div class="base-form__effects--row-cell base-form__effects--row-cell--middle">
+                <div class="popup-form__effects--row">
+                    <div class="popup-form__effects--row-cell popup-form__effects--row-cell--first">{{keySplit this.key 2}}</div> 
+                    <div class="popup-form__effects--row-cell popup-form__effects--row-cell--middle">
                         {{#ifCond this.mode "===" 5}}set to{{/ifCond}}
                         {{#ifCond this.mode "!==" 5}}
                         {{#ifCond (keySplit this.key 4) "===" "advantage"}}
@@ -38,7 +38,7 @@
                         {{/ifCond}}
                         {{/ifCond}}
                     </div>
-                    <div class="base-form__effects--row-cell base-form__effects--row-cell--last">{{this.value}}</div>
+                    <div class="popup-form__effects--row-cell popup-form__effects--row-cell--last">{{this.value}}</div>
                 </div>
             {{/each}}
             {{/ifCond}}
@@ -46,8 +46,8 @@
     </div>
     {{/ifCond}}
 
-    <div class="base-form__group base-form__group--right">
-        <button type="submit" class="base-form__button base-form__button--primary">Close</button>
-        <button type="button" class="base-form__button" data-action="toChat">Send To Chat</button>
+    <div class="popup-form__group popup-form__group--right">
+        <button type="submit" class="popup-form__button popup-form__button--primary">Close</button>
+        <button type="button" class="popup-form__button" data-action="toChat">Send To Chat</button>
     </div>
 </div>
