--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -11,7 +11,7 @@
       <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
     </div>
     {{#if (eq item.type 'gear')}}
-      <div class='grid grid-2col'>
+      <div class='grid grid-3col'>
         <div class='resource'>
           <label class='resource-label'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.quantity.label'}}</label>
           <input
@@ -30,10 +30,14 @@
             data-dtype='Number'
           />
         </div>
+        <div class='resource'>
+          <label class='resource-label'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</label>
+          <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+        </div>
       </div>
     {{/if}}
     <div class="grid grid-2col">
-    {{#if (or (eq item.type 'combatPower') (eq item.type 'gear'))}}
+    {{#if (eq item.type 'combatPower')}}
         <div class='resource grid-span-2'>
           <label class='resource-label'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</label>
           <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
