--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -17,6 +17,7 @@
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
 @use 'components/popup-forms';
+@use 'components/gear-creator';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
