--- a/src/scss/components/_gear-creator.scss
+++ b/src/scss/components/_gear-creator.scss
@@ -1,5 +1,8 @@
 .gear-creator {
-  padding: 8px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 8px 8px 8px 8px;
 
   &__header {
     margin-bottom: 24px;
