Enhanced status creator to provide information to the user at the top

--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -1,6 +1,7 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
     <div>This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets.</div>
     <div class="base-form__callout base-form__callout--information">
+      <i class="fas fa-info-circle"></i>
       {{#if (gt targetArray.length 0)}}
         There are {{targetArray.length}} target(s) selected.
       {{else}}
