--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -1,4 +1,14 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
+  <div class="base-form__callout base-form__callout--information">
+    <i class="fas fa-info-circle"></i>
+    {{#if (eq targetArray.length 0)}}
+      There are no targets selected. This will create a gear item
+      for the compendium only.
+    {{else}}
+      There are <strong>{{targetArray.length}} target(s)</strong> selected. This will create a gear item 
+      for each target and your compendium.
+    {{/if}}
+  </div>
   <div class="gear-creator__header-section">
     <div class="gear-creator__main-info">
       <div class="base-form__group">
