Enhanced the description text for change target status.

--- a/templates/macros/change-target-status.hbs
+++ b/templates/macros/change-target-status.hbs
@@ -1,5 +1,9 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-  <p>This script is to allow you to change the values on an existing status condition easily.</p>
+  <div class="base-form__callout base-form__callout--information">
+    <i class="fas fa-info-circle"></i>
+    This script is to allow you to change the values on an existing status condition easily. 
+    Keep in mind that signed numbers will be overridden by the mode selected in the dropdown.
+  </div>
   <div class="base-form__group">
     <label class="base-form__label" for="statusSelector">Status:</label>
     <select class="base-form__select" id="statusSelector" name="statusSelector">
