Clarified how gear transfer will operate when script is ran.

--- a/templates/macros/gear-transfer.hbs
+++ b/templates/macros/gear-transfer.hbs
@@ -1,4 +1,8 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
+  <div class="base-form__callout base-form__callout--information">
+    <i class="fas fa-info-circle"></i>
+    Transfer gear from {{targetActor.name}} to {{selectedActor.name}}.
+  </div>
   <div class="base-form__group">
     <label class="base-form__label" for="gearId">Select Gear:</label>
     <select class="base-form__select" id="gearId" name="gearId">
