--- a/templates/macros/restore-target.hbs
+++ b/templates/macros/restore-target.hbs
@@ -1,4 +1,8 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
+  <div class="base-form__callout base-form__callout--information">
+    <i class="fas fa-info-circle"></i>
+    Restore {{actor.name}}'s Resolve, power, and selected statuses.
+  </div>
   <div class="base-form__group base-form__group--checkbox">
     <label class="base-form__label" for="restoreResolve">Restore Resolve:</label>
     <input class="base-form__checkbox" autofocus type="checkbox" id="restoreResolve" name="restoreResolve" {{checked defaultOptions.restoreResolve}}>
