--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -1,5 +1,8 @@
 {{! Gear Tab }}
 <section class='tab gear {{tab.cssClass}}' data-group='primary' data-tab='gear'>
+  <div class="items-section-header">
+    Active Gear
+  </div>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
@@ -19,7 +22,7 @@
         {{/if}}
       </div>
     </li>
-    {{#each gear as |item id|}}
+    {{#each equippedGear as |item id|}}
       <li
         class='item flexrow'
         data-item-id='{{item._id}}'
@@ -41,6 +44,73 @@
         </div>
         <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
         <div class='item-controls'>
+          <a
+            class="item-control item-equip"
+            title='{{localize "EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.unequip.label"}}'
+            data-action='toggleGear'
+          >
+            <i class='fa-solid fa-helmet-battle'></i>
+          </a>
+          <a
+            class='item-control item-edit'
+            title='{{localize "DOCUMENT.Update" type='Gear'}}'
+            data-action='viewDoc'
+          >
+            <i class='fas fa-edit'></i>
+          </a>
+          {{#if @root.editable}}
+            <a
+              class='item-control item-delete'
+              title='{{localize "DOCUMENT.Delete" type='Gear'}}'
+              data-action='deleteDoc'
+            >
+              <i class='fas fa-trash'></i>
+            </a>
+          {{/if}}
+        </div>
+      </li>
+    {{/each}}
+    
+  </ol>
+  <div class="items-section-header">
+    Unequipped Gear
+  </div>
+  <ol class='items-list'>
+    <li class='item flexrow items-header'>
+      <div class='item-name'>{{localize 'Name'}}</div>
+      <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.quantity.label'}}</div>
+      <div class='item-controls'>
+      </div>
+    </li>
+  {{#each unequippedGear as |item id|}}
+      <li
+        class='item flexrow'
+        data-item-id='{{item._id}}'
+        data-drag='true'
+        data-document-class='Item'
+      >
+        <div class='item-name'>
+          <div class='item-image'>
+            <a class='rollable' data-roll-type='item' data-action='roll'>
+              <img
+                src='{{item.img}}'
+                title='{{item.name}}'
+                width='24'
+                height='24'
+              />
+            </a>
+          </div>
+          <div>{{item.name}}</div>
+        </div>
+        <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
+        <div class='item-controls'>
+          <a
+            class="item-control item-unequip"
+            title='{{localize "EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.unequip.label"}}'
+            data-action='toggleGear'
+          >
+            <i class='fa-solid fa-helmet-battle'></i>
+          </a>
           <a
             class='item-control item-edit'
             title='{{localize "DOCUMENT.Update" type='Gear'}}'
