Added translation string for placeholder

--- a/templates/item/attribute-parts/combat-power.hbs
+++ b/templates/item/attribute-parts/combat-power.hbs
@@ -16,7 +16,7 @@
       </div>
        <div class='grid-span-1'>
         <label class='resource-label'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.usageInfo.label'}}</label>
-        <input type='text' name='system.usageInfo' value='{{system.usageInfo}}' placeholder='e.g., 1/day' />
+        <input type='text' name='system.usageInfo' value='{{system.usageInfo}}' placeholder='{{localize "EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.usageInfo.placeholder"}}' />
       </div>
     </div>
 
