--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -104,6 +104,12 @@
     padding: 0.5rem;
     border-radius: 8px;
     background-color: rgba(0, 0, 0, 0.05);
+
+    &--usage {
+      background-color: rgba(203, 142, 0, 0.2);
+      border: 1px solid rgba(203, 142, 0, 0.4);
+      box-shadow: 0 0 10px rgba(203, 142, 0, 0.2);
+    }
   }
 
   // Row and column layout
@@ -146,6 +152,12 @@
     padding: 0.875rem;
     font-size: 1.125rem;
     margin: 0;
+
+    &--usage {
+      color: #cb8e00;
+      font-size: 1.3rem;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
   }
 
   &__content {
@@ -157,6 +169,17 @@
     background-color: colors.$form-content-bg;
     border-radius: 4px;
     text-align: center;
+
+    &--usage {
+      font-size: 1.1rem;
+      padding: 0.5rem;
+      white-space: normal;
+      text-align: justify;
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+      border-left: 3px solid #cb8e00;
+      line-height: 1.4;
+    }
 
     &--description {
       white-space: normal;
