--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -4,6 +4,7 @@
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
       <div class='item-cost'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</div>
+      <div class='item-usage'>{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.usageInfo.label'}}</div>
       <div class='item-controls'>
         {{#if @root.editable }}
           <a
@@ -40,6 +41,7 @@
           <div>{{item.name}}</div>
         </div>
         <div class='item-cost item-prop'>{{item.system.cost}}</div>
+        <div class='item-usage item-prop'>{{item.system.usageInfo}}</div>
         <div class='item-controls'>
           <a
             class='item-control item-edit'
